Opened 16 years ago

Closed 16 years ago

#4081 closed bug (fixed)

Wrong shortcut label in context menu (easy)

Reported by: humdinger Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/Icon-O-Matic Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev31444.

The shortcut in the context menu to delete a path-point is wrong. It's ALT+A which is also used for "Select All...". It should be the "DEL" key. Also the "Transform" item in the same context menu should get a "T" as shortcut label.

BTW, if you directly right-click in a point, and it isn't selected already, only the command "Select All" is available.

Change History (1)

comment:1 by stippi, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev31808. Only the "DEL" cannot currently be displayed as shortcut key in a BMenu.

Note: See TracTickets for help on using tickets.