Improved contex menu according to ticket #4081: * When right-clicking a path point directly, and it isn't currently selected,   switch the selection before showing the context menu. * Don't show the "Select All" menu item when directly clicking any path point. * Fix the shortcuts.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31808 a95241bf-73f2-0310-859d-f6bbb57e9c96